--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-element-jent",
-  "version": "0.1.5",
+  "version": "0.1.7",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,7 +9,8 @@
   "dependencies": {
     "core-js": "^3.6.5",
     "element-ui": "^2.15.6",
-    "vue": "^2.6.11"
+    "vue": "^2.6.11",
+    "vue-cropper": "^0.5.8"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
